tooling/nargo_cli/tests/snapshots/execution_success/databus_two_calldata/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(mut x: [u32; 4], y: [u32; 3], z: [u32; 4]) -> return_data [u32; 4] {
    let mut result: [u32; 4] = [0_u32; 4];
    for i in 0_u32..3_u32 {
        let idx: u32 = x[i];
        result[idx] = y[idx] + z[idx];
    }
    {
        let i_4380: u32 = x[3_u32];
        result[i_4380] = z[x[3_u32]];
    };
    result
}
